--- a/library.properties
+++ b/library.properties
@@ -1,10 +1,10 @@
 name=LoRaWAN_TLM922S
-version=0.1.4
+version=0.1.5.2
 author=askn <askn37@users.noreply.github.com>
 maintainer=Kazuhiko Sato/askn <askn37@users.noreply.github.com>
 sentence=Kiwi-tec.com TLM922S-P01A LoRaWAN Module connector for Arduino
 paragraph=Target Model: ADB922S-P01 Arduino Development Board
 category=Communication
 url=https://github.com/askn37/LoRaWAN_TLM922S
-architectures=avr
+architectures=avr,megaavr
 includes=LoRaWAN_TLM922S.h
